[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Default.png" type="Texture" id=1]
[ext_resource path="res://Items/Item.gd" type="Script" id=2]
[ext_resource path="res://Sprites/glow.png" type="Texture" id=3]

[node name="Item" type="Sprite"]

texture = ExtResource( 1 )
script = ExtResource( 2 )
slot_id = -1

[node name="SelectGlow" type="Sprite" parent="." index="0"]

visible = false
texture = ExtResource( 3 )

[node name="Control" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="mouse_entered" from="Control" to="." method="_on_Control_mouse_entered"]

[connection signal="mouse_exited" from="Control" to="." method="_on_Control_mouse_exited"]


